deploy/app/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-angular-backend
  labels:
    app: sb-angular-backend
    project: sb-angular
  annotations:
    author: "Patrice CAVEZZAN"
    email: "pcavezzan@gmail.com"
spec:
  selector:
    app: sb-angular-backend
    project: sb-angular
  ports:
    - name: http
      port: 80
      targetPort: http
