deploy/app/backend/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sb-angular-backend
  labels:
    app: sb-angular-backend
    project: sb-angular
  annotations:
    author: "Patrice CAVEZZAN"
    email: "pcavezzan@gmail.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sb-angular.apps.codinglove.fr`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: sb-angular-backend
          port: 80
      middlewares:
        - name: api-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  labels:
    app: sb-angular-backend
    project: sb-angular
  annotations:
    author: "Patrice CAVEZZAN"
    email: "pcavezzan@gmail.com"
spec:
  stripPrefix:
    prefixes:
      - /api
